# template

./: .env.example  .envrc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODEOWNERS  README.md  TUTORIAL.md  build.ninja  flake.nix  pyproject.toml  robodog_cv.ipynb
.claude/: settings.json
.github/workflows/: README-claude-push-simple.md  claude-code-review.yml  claude-mentions.yml  claude-push-simple.yml  paper.yml  type-check.yml
aux/: commits.md
config/: baseline.yaml  smoke.yaml
data/team/: eli-tyre.yml
paper-latex/: README.md
paper-typst/: main.typ
src/: hello.py
src/scripts/: _clean_worktrees_parser.py  _fork_worktree_parser.py  clean_worktrees.py  fork_worktree.py
src/template/: hello.py
src/template/agent/: README.md  config.py  env.py  main.py
src/template/utils/: git.py  yayamlml.py
src/tutorial/: stuff.py
src/tutorial/agent/: env.py  main.py  nodes.py  state.py
