[project]
name = "template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
]

[tool.pyright]
# disable pyright in favor of ruff
typeCheckingMode = "off"
ignore = ["*"]

[tool.mypy]
python_version = "3.13"
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff.lint]
select = [
    "E", # pycodestyle - Style guide enforcement
    "F", # Pyflakes - Logical error detection
    "UP", # pyupgrade - Modernize Python syntax
    "B", # flake8-bugbear - Bug risk detection
    "SIM", # flake8-simplify - Code simplification suggestions
    "I", # isort - Import sorting
]
ignore = [
    "E501" # Ignore line length violations that weren't autofixed by formatter
]
