[project]
name = "tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipdb>=0.13.13",
    "langfuse>=3.3.4",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pydantic-ai>=1.0.2",
    "python-ulid[pydantic]>=3.1.0",
]
[dependency-groups]
dev = [
    "ty>=0.0.1a18",
    "ruff>=0.12.5",
    "argcomplete>=3.6.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["src"]

[project.scripts]
fork-worktree = "scripts.fork_worktree:main"
clean-worktrees = "scripts.clean_worktrees:main"
hello = "tutorial.hello:main"
agent = "tutorial.agent.main:main"

[tool.pyright]
# disable pyright in favor of ruff
typeCheckingMode = "off"
ignore = ["*"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle - Style guide enforcement
    "F", # Pyflakes - Logical error detection
    "UP", # pyupgrade - Modernize Python syntax
    "B", # flake8-bugbear - Bug risk detection
    "SIM", # flake8-simplify - Code simplification suggestions
    "I", # isort - Import sorting
]
ignore = [
    "E501" # Ignore line length violations that weren't autofixed by formatter
]
